[package]
name = "pelt-reindeer2"
version = "0.1.0"
edition = "2024"
license-file = "License"
description = "Utility crate for reindeer2."

[dev-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
# bin dependencies
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
